--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "serve -s",
+    "dev":"ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -23,6 +24,7 @@
     "@angular/router": "~8.2.7",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
+    "serve": "^11.2.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
