--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "serve -s",
+    "start": "serve -s dist/ahorasikesi3",
     "dev":"ng serve",
     "build": "ng build",
     "test": "ng test",
